--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/*Complete css file for both functional and only front end application. Some classes may or may not be used because of that.*/
+/*Complete css file for both functional and only front end application parts put together by @254278. Some classes may or may not be used because of that. All image (icon) rights reserved to https://limezu.itch.io/*/
 
 html, body {
   height: 100%;
@@ -9,12 +9,40 @@ html, body {
   text-align: center;
 }
 
-.container { 
+.container2 {
+  padding: 16px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  padding-right:24px;
+  background-color: #CACDCA;
   display:flex;
+  border-radius: 4px;
   align-items: center;
-  width: 100%;
-  height: 128px;
+  width: 420px;
+  margin-right: auto;
+  margin-left: auto;
   justify-content: center;
+}
+
+.container3 {
+  padding: 16px;
+  padding-bottom: 20px;
+  padding-left: 24px;
+  padding-right:24px;
+  background-color: #98AF99;
+  color:black;
+  justify-content: center;
+  display:flex;
+  border-radius: 4px;
+  align-items: center;
+  width: 100px;
+  margin-right: auto;
+  margin-left: auto;
+  margin:2px;
+}
+
+.container3:hover {
+  box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
 }
 
 .grid {
@@ -24,53 +52,30 @@ html, body {
   width:128px;
 }
 
-/*button for popping popup*/
-.popUp {
-  position: relative;
-  display: inline-block;
-  cursor: pointer;
-}
-
-/*popup information*/
-.popUp .popUpText {
-  visibility: hidden;
-  width: 160px;
-  background-color: #111;
-  color: whitesmoke;
+.button {
+  background-color: #797E79;
+  border-radius: 4px;
+  color: black;
+  padding: 15px 32px;
   text-align: center;
-  border-radius: 20px;
-  padding: 10px;
-  position: absolute;
-  z-index: 1;
-  bottom: 125%;
-  left: 50%;
-  margin-left: -80px;
+  display: inline-block;
+  font-size: 20px;
+  width: 150px;
+  margin: 4px;
 }
 
-/*shows the popup information*/
-.popUp .show {
-  visibility: visible;
-  -webkit-animation: fadeIn 1s;
-  animation: fadeIn 1s
+.button:hover {
+    background-color: #6A756A;
 }
 
 
-@-webkit-keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-
-@keyframes fadeIn {
-  from {opacity: 0;}
-  to {opacity: 1;}
-}
-/*container for the playing grid*/
-.grid-container {
+.grid-container8columns {
   display: grid;
-  grid-template-columns: auto auto auto auto;
+  grid-template-columns: repeat(8, auto);
   gap: 10px;
   background-color: white;
   padding: 10px;
+  justify-content: center;
 }
 
 .grid-container > div {
@@ -78,4 +83,183 @@ html, body {
   text-align: center;
   padding: 20px 0;
   font-size: 30px;
+}
+
+.head {
+  max-width: 480px;
+  background-color: #98AF99;
+  border-radius: 8px;
+  margin: auto;
+  height: 170px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 20px;
+  color: #3D3D3D;
+}
+
+.score {
+  margin-top: 5px;
+}
+
+.time{
+  margin-top:2px;
+}
+
+.timed{
+  margin-top:2px;
+}
+
+
+.container2x2 {
+  max-width: 960px;
+  display: grid;
+  grid-template-columns: repeat(2, auto);
+  gap: 1rem;
+  margin: auto;
+  padding: 15px;
+}
+
+.container3x3 {
+  max-width: 960px;
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  gap: 1rem;
+  margin: auto;
+  padding: 15px;
+}
+
+.container4x4 {
+  max-width: 960px;
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  gap: 1rem;
+  margin: auto;
+  padding: 15px;
+}
+
+.container5x5 {
+  max-width: 960px;
+  display: grid;
+  grid-template-columns: repeat(5, auto);
+  gap: 1rem;
+  margin: auto;
+  padding: 15px;
+}
+
+.container6x6 {
+  max-width: 960px;
+  display: grid;
+  grid-template-columns: repeat(6, auto);
+  gap: 1rem;
+  margin: auto;
+  padding: 15px;
+}
+
+.container7x7 {
+  max-width: 960px;
+  display: grid;
+  grid-template-columns: repeat(7, auto);
+  gap: 1rem;
+  margin: auto;
+  padding: 15px;
+}
+
+.container8x8 {
+  max-width: 960px;
+  display: grid;
+  grid-template-columns: repeat(8, auto);
+  gap: 1rem;
+  margin: auto;
+  padding: 15px;
+}
+
+.cell div {
+  height: 130px;
+  border-radius: 4px;
+}
+
+.cell {
+  position: relative;
+  cursor: pointer;
+}
+
+.front {
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #a6a6a6;
+  background-color: #f2f2f2;
+  transform: rotateY(90deg);
+}
+
+.cardBack {
+  background-color: #3D3D3D ;
+}
+
+img {
+  height: 100px;
+  width: 100px;
+}
+
+.flip {
+  transform: rotateY(0deg);
+}
+.match {
+  transform: rotateY(0deg);
+}
+
+.show {
+  transform: rotateY(0deg);
+}
+
+@media screen and (min-width: 770px) {
+  .head {
+    max-width: 760px;
+  }
+
+  .container2x2 {
+    grid-template-columns: repeat(2, auto);
+  }
+
+.container3x3 {
+    grid-template-columns: repeat(3, auto);
+  }
+
+  .container4x4 {
+    grid-template-columns: repeat(4, auto);
+  }
+
+  .container5x5 {
+    grid-template-columns: repeat(5, auto);
+  }
+
+  .container6x6 {
+    grid-template-columns: repeat(6, auto);
+  }
+
+  .container7x7 {
+    grid-template-columns: repeat(7, auto);
+  }
+
+  .container8x8 {
+    grid-template-columns: repeat(8, auto);
+  }
+
+  .cell div {
+    height: 60px;
+  }
+}
+
+.center{
+  margin-left:auto;
+  margin-right:auto;
+}
+
+tr:nth-child(even) {
+  background-color: #98AF99;
 }
