--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
-/*Complete css file for both functional and only front end application parts put together by @254278. Some classes may or may not be used because of that. All image (icon) rights reserved to https://limezu.itch.io/*/
+/*Complete css file for both functional and only front end application parts put together by @254278. */
+/*Some classes may or may not be used because of that. All image (icon) rights reserved to https://limezu.itch.io/*/
 
 html, body {
   height: 100%;
@@ -59,7 +60,8 @@ html, body {
   padding: 15px 32px;
   text-align: center;
   display: inline-block;
-  font-size: 20px;
+  font-size: 1.17em;
+  font-weight:bolder;
   width: 150px;
   margin: 4px;
 }
